@@ -25,9 +25,27 @@
 namespace MUSIC {
 
   class permutation_index : public index_map {
-    std::vector<interval> _indices;
+    std::vector<index_interval> _indices;
   public:
+    class iterator : public index_map::iterator_implementation {
+      const index_interval* interval_ptr;
+    public:
+      iterator (const index_interval* ptr) : interval_ptr (ptr) { }
+      virtual const index_interval operator* () { return *interval_ptr; }
+      virtual const index_interval* dereference () { return interval_ptr; }
+      virtual bool is_equal (iterator_implementation* i) const
+      {
+	return interval_ptr == static_cast<iterator*> (i)->interval_ptr;
+      }
+      virtual void operator++ () { ++interval_ptr; }
+      virtual iterator_implementation* copy ()
+      {
+	return new iterator (interval_ptr);
+      }
+    };
+    
     permutation_index (global_index *indices, int size);
+    permutation_index (std::vector<index_interval>& indices);
     virtual index_map::iterator begin ();
     virtual const index_map::iterator end () const;
     virtual index_map* copy ();    
