@@ -23,31 +23,46 @@
 
 namespace MUSIC {
   
+  bool operator< (const index_interval& a, const index_interval& b)
+  {
+    return (a.begin () < b.begin ()
+	    || (a.begin () == b.begin () && a.end () < b.end ()));
+  }
+  
   permutation_index::permutation_index (global_index* indices, int size)
   {
+    
     //*fixme* collapse where possible
     for (int i = 0; i < size; ++i)
-      _indices.push_back (interval (indices[i], indices[i] + 1));
+      _indices.push_back (index_interval (indices[i], indices[i] + 1, i));
+    sort (_indices.begin (), _indices.end ());
+  }
+  
+
+  permutation_index::permutation_index (std::vector<index_interval>& indices)
+    : _indices (indices)
+  {
   }
 
+  
   index_map::iterator
   permutation_index::begin ()
   {
-    return index_map::iterator (0); //*fixme*
+    return index_map::iterator (new iterator (&_indices.front ()));
   }
 
   
   const index_map::iterator
   permutation_index::end () const
   {
-    return index_map::iterator (0);
+    return index_map::iterator (new iterator (&_indices.back () + 1));
   }
 
 
   index_map*
   permutation_index::copy ()
   {
-    return new permutation_index (*this);
+    return new permutation_index (_indices);
   }
 
 }
